tests/ui/parser/misspelled-keywords/const-fn.rs
cnst fn code() {}
//~^ ERROR expected one of

fn main() {
}
